--- a/Lync.WinForms.Controls.Demo/Lync.WinForms.Controls.Demo.csproj
+++ b/Lync.WinForms.Controls.Demo/Lync.WinForms.Controls.Demo.csproj
@@ -44,6 +44,11 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Program Files\Microsoft Office\Office15\LyncSDK\Assemblies\Desktop\Microsoft.Lync.Utilities.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Office.Uc, Version=15.0.4603.1000, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <HintPath>..\Lync.WinForms.Controls\FileReferences\Microsoft.Office.Uc.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
