--- a/Lync.WinForms.Controls.Demo/Lync.WinForms.Controls.Demo.csproj
+++ b/Lync.WinForms.Controls.Demo/Lync.WinForms.Controls.Demo.csproj
@@ -46,7 +46,7 @@
     </Reference>
     <Reference Include="Microsoft.Office.Uc, Version=15.0.4603.1000, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
       <HintPath>..\Lync.WinForms.Controls\FileReferences\Microsoft.Office.Uc.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
