--- a/Lync.WinForms.Controls/Lync.WinForms.Controls.csproj
+++ b/Lync.WinForms.Controls/Lync.WinForms.Controls.csproj
@@ -49,7 +49,7 @@
     </Reference>
     <Reference Include="Microsoft.Office.Uc, Version=15.0.4603.1000, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
       <HintPath>FileReferences\Microsoft.Office.Uc.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
@@ -77,16 +77,7 @@
     <Compile Include="PresenceIndicator.Designer.cs">
       <DependentUpon>PresenceIndicator.cs</DependentUpon>
     </Compile>
-    <Compile Include="WPF\PresenceIndicator.xaml.cs">
-      <DependentUpon>PresenceIndicator.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Page Include="WPF\PresenceIndicator.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="PresenceIndicator.resx">
