--- a/Lync.WinForms.Controls.Demo/Lync.WinForms.Controls.Demo.csproj
+++ b/Lync.WinForms.Controls.Demo/Lync.WinForms.Controls.Demo.csproj
@@ -34,15 +34,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Lync.Controls, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL" />
-    <Reference Include="Microsoft.Lync.Controls.Framework, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.Lync.Controls, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <HintPath>F:\Werk\Code\Lync.WinForms.Controls-master\Lync.WinForms.Controls-master\Lync.WinForms.Controls\FileReferences\Microsoft.Lync.Controls.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Lync.Controls.Framework, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <HintPath>F:\Werk\Code\Lync.WinForms.Controls-master\Lync.WinForms.Controls-master\Lync.WinForms.Controls\FileReferences\Microsoft.Lync.Controls.Framework.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Lync.Model, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files\Microsoft Office\Office15\LyncSDK\Assemblies\Desktop\Microsoft.Lync.Model.dll</HintPath>
+      <HintPath>F:\Werk\Code\Lync.WinForms.Controls-master\Lync.WinForms.Controls-master\Lync.WinForms.Controls\FileReferences\Microsoft.Lync.Model.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Lync.Utilities, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files\Microsoft Office\Office15\LyncSDK\Assemblies\Desktop\Microsoft.Lync.Utilities.dll</HintPath>
+      <HintPath>F:\Werk\Code\Lync.WinForms.Controls-master\Lync.WinForms.Controls-master\Lync.WinForms.Controls\FileReferences\Microsoft.Lync.Utilities.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Office.Uc, Version=15.0.4603.1000, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
